testsuite/tests/typing-modes/use_portable.ml
let portable_use : _ @ portable -> _ = fun _ -> ()

let () = portable_use Maybe_portable.f
